# cGeDBIT

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  clean.sh  objects
APP/: QueryIndex.cpp  Querymain.cpp
APP/CVS/: Entries  Repository
HeaderFiles/CVS/: Entries  Entries.Extra.Old  Root
HeaderFiles/index/: IndexNode.h  MVPLeafNode.h
HeaderFiles/index/CVS/: Entries  Entries.Old  Repository
HeaderFiles/indexalgorithm/: BalancePartitionMethod.h  EcludedMiddlePartitionMethod.h  FFTPivotSelectionMethod.h  PartitionMethod.h
HeaderFiles/indexalgorithm/CVS/: Entries.Extra  Entries.Extra.Old
HeaderFiles/metric/: EditDistance.h  ImageMetric.h  MSMSMetric.h
HeaderFiles/metric/CVS/: Entries
HeaderFiles/objects/: Image.h  RNA.h  TandemSpectra.h
HeaderFiles/objects/CVS/: Entries  Entries.Extra  Entries.Extra.Old  Entries.Old
HeaderFiles/query/: Query.h  RangeQuery.h
HeaderFiles/query/CVS/: Entries
HeaderFiles/type/: DoubleIndexObjectPair.h
HeaderFiles/type/CVS/: Entries.Extra
HeaderFiles/util/: getopt.h
HeaderFiles/util/CVS/: Entries
SourceFiles/index/: EcludedMiddleForest.cpp  IndexNode.cpp  MVPIndex.cpp  MVPInternalNode.cpp  MVPLeafNode.cpp
SourceFiles/index/CVS/: Entries  Entries.Old
SourceFiles/indexalgorithm/: BalancePartitionMethod.cpp  EcludedMiddlePartitionMethod.cpp  FFTPivotSelectionMethod.cpp  PartitionResualts.cpp
SourceFiles/indexalgorithm/CVS/: Entries  Entries.Extra.Old  Entries.Old
SourceFiles/metric/: DNAMetric.cpp  ImageMetric.cpp  MSMSMetric.cpp
SourceFiles/metric/CVS/: Entries.Extra.Old  Repository
SourceFiles/objects/: DNA.cpp  Image.cpp  RNA.cpp  StringObject.cpp
SourceFiles/objects/CVS/: Repository
SourceFiles/query/: RangeQuery.cpp
SourceFiles/query/CVS/: Entries.Extra
SourceFiles/type/CVS/: Repository
SourceFiles/util/: getopt.cpp
SourceFiles/util/CVS/: Repository
src/APP/: BuildIndex.cpp  BuildORQueryIndex.cpp  QueryIndex.cpp
src/HeaderFiles/CVS/: Entries.Old  Repository
src/HeaderFiles/index/: EcludedMiddleForest.h  ExcludedMiddleForest.h  Index.h  IndexNode.h  ListIndex.h  MVPIndex.h  MVPInternalNode.h  MVPLeafNode.h
src/HeaderFiles/index/CVS/: Entries.Extra  Entries.Extra.Old
src/HeaderFiles/indexalgorithm/: BalancePartitionMethod.h  EcludedMiddlePartitionMethod.h  ExcludedMiddlePartitionMethod.h  FFTPivotSelectionMethod.h  IncrementalSelection.h  LLEPivotSelectionMethod.h  PCA.h  PCAOnFFT.h  PartitionMethod.h  PartitionResults.h  PivotSelectionMethod.h
src/HeaderFiles/indexalgorithm/CVS/: Entries  Entries.Old  Repository
src/HeaderFiles/metric/: CountedMetric.h  DNAMetric.h  EditDistance.h  EuclideanDistance.h  ImageMetric.h  LInfinityDistance.h  MSMSMetric.h  Metric.h  PeptideMetric.h  RNAMetric.h
src/HeaderFiles/metric/CVS/: Entries.Extra  Entries.Extra.Old  Entries.Old  Repository
src/HeaderFiles/objects/: DNA.h  DoubleIndexObjectPair.h  DoubleVector.h  Image.h  IndexObject.h  Peptide.h  RNA.h  StringObject.h  TandemSpectra.h
src/HeaderFiles/objects/CVS/: Repository
src/HeaderFiles/query/: Query.h  RangeQuery.h  SeachTask.h
src/HeaderFiles/query/CVS/: Entries.Extra  Repository
src/HeaderFiles/type/: DoubleIndexObjectPair.h
src/HeaderFiles/type/CVS/: Entries  Repository
src/HeaderFiles/util/: MemMonitor.h  ObjectFactory.h  getopt_win.h  logTool.h
src/HeaderFiles/util/CVS/: Entries.Extra  Repository
src/SourceFiles/CVS/: Entries.Extra  Repository
src/SourceFiles/app/: main.cpp
src/SourceFiles/index/: EcludedMiddleForest.cpp  ExcludedMiddleForest.cpp  Index.cpp  IndexNode.cpp  ListIndex.cpp  MVPIndex.cpp  MVPInternalNode.cpp  MVPLeafNode.cpp
src/SourceFiles/index/CVS/: Entries.Extra  Entries.Extra.Old  Repository
src/SourceFiles/indexalgorithm/: BalancePartitionMethod.cpp  EcludedMiddlePartitionMethod.cpp  ExcludedMiddlePartitionMethod.cpp  FFTPivotSelectionMethod.cpp  IncrementalSelection.cpp  LLEPivotSelectionMethod.cpp  PCA.cpp  PCAOnFFT.cpp  PartitionResults.cpp
src/SourceFiles/indexalgorithm/CVS/: Entries.Extra  Repository
src/SourceFiles/metric/: CountedMetric.cpp  DNAMetric.cpp  EditDistance.cpp  EuclideanDistance.cpp  ImageMetric.cpp  LInfinityDistance.cpp  MSMSMetric.cpp  Metric.cpp  PeptideMetric.cpp  RNAMetric.cpp
src/SourceFiles/metric/CVS/: Entries  Entries.Extra  Entries.Old
src/SourceFiles/objects/: DNA.cpp  DoubleIndexObjectPair.cpp  DoubleVector.cpp  Image.cpp  IndexObject.cpp  Peptide.cpp  RNA.cpp  StringObject.cpp  TandemSpectra.cpp
src/SourceFiles/objects/CVS/: Entries  Entries.Extra  Entries.Extra.Old  Entries.Old
src/SourceFiles/query/: Query.cpp  RangeQuery.cpp  SeachTask.cpp
src/SourceFiles/query/CVS/: Entries  Repository
src/SourceFiles/type/: DoubleIndexObjectPair.cpp
src/SourceFiles/type/CVS/: Entries  Entries.Extra
src/SourceFiles/util/: LoadOrSearch.cpp  MVPIndexStructureAnalysor.cpp  MemMonitor.cpp  ObjectFactory.cpp  getopt.cpp  getopt_win.cpp  logTool.cpp
src/SourceFiles/util/CVS/: Entries  Entries.Extra
src/app/: BuildIndex.cpp  BuildMVPIndex.cpp  QueryIndex.cpp  Querymain.cpp  main.cpp
src/app/CVS/: Entries.Extra  Entries.Extra.Old  Entries.Old
